--- a/WordGame/Views/Base.lproj/Main.storyboard
+++ b/WordGame/Views/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,13 +15,93 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6qt-Kj-TkD">
+                                <rect key="frame" x="20" y="158" width="374" height="573"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uxv-ha-gUf">
+                                        <rect key="frame" x="67" y="222.5" width="240" height="128"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QuM-e8-57G">
+                                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="word1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VTX-6u-0a8">
+                                                <rect key="frame" x="99" y="53" width="46" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="128" id="CuO-1O-bye"/>
+                                            <constraint firstAttribute="trailing" secondItem="QuM-e8-57G" secondAttribute="trailing" id="H7n-cE-kd4"/>
+                                            <constraint firstItem="VTX-6u-0a8" firstAttribute="centerY" secondItem="uxv-ha-gUf" secondAttribute="centerY" id="Pgl-UR-48n"/>
+                                            <constraint firstItem="QuM-e8-57G" firstAttribute="leading" secondItem="uxv-ha-gUf" secondAttribute="leading" id="QnN-y0-Dh0"/>
+                                            <constraint firstItem="QuM-e8-57G" firstAttribute="top" secondItem="uxv-ha-gUf" secondAttribute="top" id="hom-80-SqB"/>
+                                            <constraint firstItem="VTX-6u-0a8" firstAttribute="centerX" secondItem="QuM-e8-57G" secondAttribute="centerX" id="iYV-I7-csw"/>
+                                            <constraint firstAttribute="width" constant="240" id="y2n-WJ-WiV"/>
+                                            <constraint firstAttribute="bottom" secondItem="QuM-e8-57G" secondAttribute="bottom" id="ybT-HL-h7f"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zXi-Xv-9Zf">
+                                        <rect key="frame" x="67" y="8" width="240" height="128"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VgR-ZT-nH6">
+                                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="word2" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bIQ-HE-mhp">
+                                                <rect key="frame" x="99" y="54" width="48" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="240" id="Fxi-vN-CiM"/>
+                                            <constraint firstItem="VgR-ZT-nH6" firstAttribute="leading" secondItem="zXi-Xv-9Zf" secondAttribute="leading" id="LyM-CH-Pkx"/>
+                                            <constraint firstItem="VgR-ZT-nH6" firstAttribute="top" secondItem="zXi-Xv-9Zf" secondAttribute="top" id="Pvg-EO-sEh"/>
+                                            <constraint firstAttribute="bottom" secondItem="VgR-ZT-nH6" secondAttribute="bottom" id="SFs-Sm-PQS"/>
+                                            <constraint firstItem="bIQ-HE-mhp" firstAttribute="centerX" secondItem="zXi-Xv-9Zf" secondAttribute="centerX" id="Wef-MB-P8Z"/>
+                                            <constraint firstAttribute="trailing" secondItem="VgR-ZT-nH6" secondAttribute="trailing" id="iSy-7f-qgV"/>
+                                            <constraint firstAttribute="height" constant="128" id="jmM-7H-2RE"/>
+                                            <constraint firstItem="bIQ-HE-mhp" firstAttribute="centerY" secondItem="zXi-Xv-9Zf" secondAttribute="centerY" id="mIG-dy-nE4"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="uxv-ha-gUf" firstAttribute="centerY" secondItem="6qt-Kj-TkD" secondAttribute="centerY" id="A8y-9o-sJd"/>
+                                    <constraint firstItem="uxv-ha-gUf" firstAttribute="centerX" secondItem="6qt-Kj-TkD" secondAttribute="centerX" id="eom-Kz-QgV"/>
+                                    <constraint firstItem="zXi-Xv-9Zf" firstAttribute="centerX" secondItem="6qt-Kj-TkD" secondAttribute="centerX" id="jpv-Zr-FXp"/>
+                                    <constraint firstItem="zXi-Xv-9Zf" firstAttribute="top" secondItem="6qt-Kj-TkD" secondAttribute="top" constant="8" id="src-fn-Qmb"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="6qt-Kj-TkD" secondAttribute="trailing" constant="20" id="C3k-xe-meB"/>
+                            <constraint firstItem="6qt-Kj-TkD" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="114" id="GYa-JV-gpa"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="6qt-Kj-TkD" secondAttribute="bottom" constant="131" id="STi-Pu-GNP"/>
+                            <constraint firstItem="6qt-Kj-TkD" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="VfD-UN-rfo"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="centerWord" destination="VTX-6u-0a8" id="kub-mn-XBu"/>
+                        <outlet property="fallingWord" destination="bIQ-HE-mhp" id="zZi-Hc-aDH"/>
+                        <outlet property="gameView" destination="6qt-Kj-TkD" id="6ZJ-c4-f6x"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="20" y="98"/>
+            <point key="canvasLocation" x="18.840579710144929" y="97.767857142857139"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
